--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,87 +8,64 @@
         tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/sms_guideline_top"
+            android:id="@+id/ccp_guideline_top"
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintGuide_percent=".5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/sms_guideline_start"
+            android:id="@+id/ccp_guideline_start"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dimen_0dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintGuide_percent=".3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <com.rilixtech.CountryCodePicker
             android:id="@+id/ccp_code"
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_15dp"
-            android:layout_marginLeft="@dimen/dimen_15dp"
             app:ccp_arrowSize="@dimen/dimen_10dp"
             app:ccp_defaultCode="254"
-            app:layout_constraintBottom_toBottomOf="@id/et_ccp_phone"
-            app:layout_constraintEnd_toStartOf="@id/sms_guideline_start"
+            app:layout_constraintBottom_toBottomOf="@id/til_ccp_phone"
+            app:layout_constraintEnd_toStartOf="@id/ccp_guideline_start"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sms_guideline_top"
-            app:layout_constraintTop_toTopOf="@id/et_ccp_phone" />
+            app:layout_constraintTop_toBottomOf="@id/ccp_guideline_top"
+            app:layout_constraintTop_toTopOf="@id/til_ccp_phone"/>
 
-
-    <EditText
-            android:id="@+id/et_ccp_phone"
+    <com.google.android.material.textfield.TextInputLayout
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dimen_15dp"
-            android:layout_marginRight="@dimen/dimen_15dp"
-            android:hint="@string/phone_number"
-            android:imeOptions="actionDone"
-            android:inputType="phone"
+            android:id="@+id/til_ccp_phone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/sms_guideline_start"
-            app:layout_constraintTop_toBottomOf="@id/sms_guideline_top" />
+            android:hint="@string/text_phone"
+            app:layout_constraintStart_toEndOf="@id/ccp_guideline_start"
+            app:layout_constraintTop_toBottomOf="@id/ccp_guideline_top">
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_ccp_phone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/dimen_15dp"
+                android:hint="@string/phone_number"
+                android:imeOptions="actionDone"
+                android:inputType="phone"
+        />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tiet_verification_code"
-            android:layout_width="@dimen/dimen_0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/text_code"
-            android:imeOptions="actionDone"
-            android:inputType="numberDecimal"
-            android:paddingStart="@dimen/dimen_10dp"
-            android:paddingLeft="@dimen/dimen_10dp"
-            android:paddingEnd="@dimen/dimen_0dp"
-            android:paddingRight="@dimen/dimen_0dp"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sms_guideline_top" />
-
-    <Button
-            android:id="@+id/ccp_verify_btn"
-            android:layout_width="@dimen/dimen_0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:text="@string/text_continue"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tiet_verification_code" />
-
-    <Button
+    <com.google.android.material.button.MaterialButton
             android:id="@+id/ccp_next_btn"
             android:layout_width="@dimen/dimen_0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:text="@string/app_intro_next"
-            app:layout_constraintEnd_toStartOf="@id/et_ccp_phone"
-            app:layout_constraintTop_toBottomOf="@id/et_ccp_phone" />
+            app:layout_constraintEnd_toStartOf="@id/til_ccp_phone"
+            app:layout_constraintTop_toBottomOf="@id/til_ccp_phone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
